infra/k8s/overlays/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: getupnet-api
spec:
  rules:
    - host: api.stg.getupnet.do
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: getupnet-api
                port:
                  name: http
  tls:
    - hosts:
        - api.stg.getupnet.do
      secretName: api-tls
